Text Mining of 20th Century Events Project

--- a/Task_1.5_Text_Mining.ipynb
+++ b/Task_1.5_Text_Mining.ipynb
@@ -504,7 +504,7 @@
     "The graph mostly displayed common words such as \"the,\" \"of,\" \"and,\" and \"to\". While these words are frequently used in language, they offer little meaning to the analysis of the text content. Other results \"2018,\" \"December,\" and \"Retrieved\" did not offer any more significance in understanding the text's content either and did not show to be of analysis benefits. The graph appears to have been mostly noise that prevented the key topics of the text to be seen.\n",
     "\n",
     "After filerting out stopwords:\n",
-    "The graph begins to see more noteable words of worth to the text content. The graph now is showing words relevant to key topics of the text to help provide more clarity of noteable 20th century events. With the removal, the graph begins to show words like \"Hitler\", World\" & \"War\" (World War), \"Soviet\", and \"Decemeber\" taking some of the top 10 spots on the graph. This now shows the events to be of noteable war events and can now beging to see that the text may be of a sad part of history and is a text of ojbective facts."
+    "The graph begins to see more noteable words of worth to the text content. The graph now is showing words relevant to key topics of the text to help provide more clarity of noteable 20th century events. With the removal, the graph begins to show words like \"Hitler\", World\" & \"War\" (World War), \"Soviet\", and \"Decemeber\" taking some of the top 10 spots on the graph. This now shows the events to be of noteable war events and can now begin to see that the text may be of a sad part of history and is a text of ojbective facts."
    ]
   },
   {
