Text Mining 20th Century Events Project

--- a/Task_1.5_Text_Mining.ipynb
+++ b/Task_1.5_Text_Mining.ipynb
@@ -500,11 +500,11 @@
    "metadata": {},
    "source": [
     "### Plot Comments of Before and After Stopwords\n",
-    "Before Stopwords Removal:\n",
-    "The graph mostly displayed common words such as \"the,\" \"of,\" \"and,\" and \"to\". While these words are frequently used in language, they offer little meaning to the analysis of the text content. Other results \"2018,\" \"December,\" and \"Retrieved\" did not offer any more significance in understanding the text's content either and did not show to be of analysis benefits. The graph appears to have been mostly noise that prevented the key topics of the text to be seen.\n",
+    "    Before Stopwords Removal:\n",
+    "    The graph mostly displayed common words such as \"the,\" \"of,\" \"and,\" and \"to\". While these words are frequently used in language, they offer little meaning to the analysis of the text content. Other results \"2018,\" \"December,\" and \"Retrieved\" did not offer any more significance in understanding the text's content either and did not show to be of analysis benefits. The graph appears to have been mostly noise that prevented the key topics of the text to be seen.\n",
     "\n",
-    "After filerting out stopwords:\n",
-    "The graph begins to see more noteable words of worth to the text content. The graph now is showing words relevant to key topics of the text to help provide more clarity of noteable 20th century events. With the removal, the graph begins to show words like \"Hitler\", World\" & \"War\" (World War), \"Soviet\", and \"Decemeber\" taking some of the top 10 spots on the graph. This now shows the events to be of noteable war events and can now begin to see that the text may be of a sad part of history and is a text of ojbective facts."
+    "    After filerting out stopwords:\n",
+    "    The graph begins to see more noteable words of worth to the text content. The graph now is showing words relevant to key topics of the text to help provide more clarity of noteable 20th century events. With the removal, the graph begins to show words like \"Hitler\", World\" & \"War\" (World War), \"Soviet\", and \"Decemeber\" taking some of the top 10 spots on the graph. This now shows the events to be of noteable war events and can now begin to see that the text may be of a sad part of history and is a text of objective facts."
    ]
   },
   {
@@ -1455,7 +1455,7 @@
    "metadata": {},
    "source": [
     "#### Comments Adjective Word Types\n",
-    "    In the adjective graph, it can be seen that \"Japanese\" and \"American\" are the most frequently occurring, which shows the significant roles these two nations played during events in the 20th century. After that, it can be seen words like \"Atlantic\" and \"West\" appear rather frequently and show at geographic locations during the 20th century events. Further down the graph, words like \"Chinese\", \"Russian\", \"African\",and \"politcal\" which can show again the global nature of the text and its events based on the diverse groups. The graph highlights nations and location attributes to descirbe the major players and locations invovled in the events of the 20th century. "
+    "    In the adjective graph, it can be seen that \"Japanese\" and \"American\" are the most frequently occurring, which shows the significant roles these two nations played during events in the 20th century. After that, it can be seen words like \"Atlantic\" and \"West\" appear rather frequently and show at geographic locations during the 20th century events. Further down the graph, words like \"Chinese\", \"Russian\", \"African\",and \"politcal\" which can show again the global nature of the text and its events based on the diverse groups. The graph highlights nations and location attributes to describe the major players and locations invovled in the events of the 20th century. "
    ]
   },
   {
@@ -2501,8 +2501,8 @@
    "metadata": {},
    "source": [
     "#### Country Occurrence Findings\n",
-    "    The above graph shows the number of occurrances for those countries with references in the text, while any other country not referenced has been filtered out. Therefore, any country not in the graph has a number of 0. This approach allows the data to highlight those noteable players during the 20th century events.\n",
-    "    The graph shows that Germany, Japan, and the United States are the top three countries with references and can be noticed as the major players during the events of the 20th century. The graph also shows other noteable references to be France, Poland, Vietnam, Italy, Russia, and China who are also players in noteable historical events around these times like World Wars, Cold War, and the Vietnam War.  "
+    "    The above graph shows the number of occurrances for those countries with references in the text, while any other country not referenced has been filtered out. Therefore, any country not in the graph has a number of 0. This approach allows the data to highlight those notable players during the 20th century events.\n",
+    "    The graph shows that Germany, Japan, and the United States are the top three countries with references and can be noticed as the major players during the events of the 20th century. The graph also shows other noteable references to be France, Poland, Vietnam, Italy, Russia, and China who are also players in notable historical events around these times like World Wars, Cold War, and the Vietnam War.  "
    ]
   },
   {
@@ -2519,7 +2519,7 @@
    "metadata": {},
    "source": [
     "### Sentiment Test Expectation\n",
-    "Based on the sentiment test results, the analysis yielded a sentiment polarity of 0.487 and a subjectivity score of 0.354. This suggests that the text does indeed lean more towards a factual nature, which aligns with the historical content of the text and my expectations of the text analysis. Since the text primarily provides historical information, it makes sense for it to appear more objective. However, I was surprised to see the overall tone being more neutral over negative, especially considering the frequent occurrence of war-related terms in the frequency graphs. Despite the focus on war and the devasting effects it can cause, the sentiment of the text remains appears to of a neutral tone in the portrayal of these 20th century events."
+    "    Based on the sentiment test results, the analysis yielded a sentiment polarity of 0.487 and a subjectivity score of 0.354. This suggests that the text does indeed lean more towards a factual nature, which aligns with the historical content of the text and my expectations of the text analysis. Since the text primarily provides historical information, it makes sense for it to appear more objective. However, I was surprised to see the overall tone being more neutral over negative, especially considering the frequent occurrence of war-related terms in the frequency graphs. Despite the focus on war and the devasting effects it can cause, the sentiment of the text remains appears to of a neutral tone in the portrayal of these 20th century events."
    ]
   },
   {
@@ -2616,7 +2616,7 @@
    "metadata": {},
    "source": [
     "### Sentiment Test Result: \n",
-    "Based on the rest results above, it appears that the test ran a polarity of 0.049 and a subjectivity score of 0.354. From this, it can be seen that the text is more objective and fact based than subjective or opinionated. As this text is based on historical events of the 20th century, I believe this aligns. HOwever, what surpised me and what resulted differently than my expectation is that the text shows to be near neutral polarity but with a slight hint of postitive sentiment being at 0.049. As most of the text appeared to be conerning war events, I believed it to be on a more saddened note as a reult of war casualities."
+    "    Based on the rest results above, it appears that the test ran a polarity of 0.049 and a subjectivity score of 0.354. From this, it can be seen that the text is more objective and fact based than subjective or opinionated. As this text is based on historical events of the 20th century, I believe this aligns. HOwever, what surpised me and what resulted differently than my expectation is that the text shows to be near neutral polarity but with a slight hint of postitive sentiment being at 0.049. As most of the text appeared to be conerning war events, I believed it to be on a more saddened note as a reult of war casualities."
    ]
   },
   {
