Text Mining 20th Century Events Project

--- a/Task_1.5_Text_Mining.ipynb
+++ b/Task_1.5_Text_Mining.ipynb
@@ -2519,7 +2519,7 @@
    "metadata": {},
    "source": [
     "### Sentiment Test Expectation\n",
-    "    Based on the sentiment test results, the analysis yielded a sentiment polarity of 0.487 and a subjectivity score of 0.354. This suggests that the text does indeed lean more towards a factual nature, which aligns with the historical content of the text and my expectations of the text analysis. Since the text primarily provides historical information, it makes sense for it to appear more objective. However, I was surprised to see the overall tone being more neutral over negative, especially considering the frequent occurrence of war-related terms in the frequency graphs. Despite the focus on war and the devasting effects it can cause, the sentiment of the text remains appears to of a neutral tone in the portrayal of these 20th century events."
+    "    Based on my analysis of the text, I expect the sentiment analysis to yield a negatively, objective tone. This believed due to the frequent results of war-related terms and notable historical figures during the text analysis. In the word frequency graphs, words like Hitler, Germans, Soviet, and World War (easily seen from World & War despite being separated) appeared frequently, signifying 20th-century conflicts. The occurrence of words like surrendered, controlled, American, Japanese, Russia, and Vietnam further emphasize wartime events of the period, referencing World War II, the Cold War, and the Vietnam War. Based on the dominant tone of warlike words, I expect the sentiment analysis test to yield a factual, negative result because of the war focused events and conflicts throughout the 20th century."
    ]
   },
   {
@@ -2616,7 +2616,7 @@
    "metadata": {},
    "source": [
     "### Sentiment Test Result: \n",
-    "    Based on the rest results above, it appears that the test ran a polarity of 0.049 and a subjectivity score of 0.354. From this, it can be seen that the text is more objective and fact based than subjective or opinionated. As this text is based on historical events of the 20th century, I believe this aligns. HOwever, what surpised me and what resulted differently than my expectation is that the text shows to be near neutral polarity but with a slight hint of postitive sentiment being at 0.049. As most of the text appeared to be conerning war events, I believed it to be on a more saddened note as a reult of war casualities."
+    "      Based on the sentiment test results, the analysis yielded a sentiment polarity of 0.487 and a subjectivity score of 0.354. This suggests that the text does indeed lean more towards a factual nature, which aligns with the historical content of the text and my expectations of the text analysis. Since the text primarily provides historical information, it makes sense for it to appear more objective. However, I was surprised to see the overall tone being more neutral over negative, especially considering the frequent occurrence of war-related terms in the frequency graphs. Despite the focus on war and the devasting effects it can cause, the sentiment of the text remains appears to of a neutral tone in the portrayal of these 20th century events."
    ]
   },
   {
